<resources>
    <string name="app_name">Internetgekkie Dating</string>
    <string name="title">Internetgekkie Dating</string>
    <string name="subtitle">Welk internetgekkie past bij jou?</string>
    <string name="broodjebelegmeneer">Broodje-beleg-meneer</string>
    <string name="pizzameisje">Pizza-meisje</string>
    <string name="rappersjors">Rapper Sjors</string>
    <string name="rapsmevrouw">Raps-mevrouw</string>
    <string name="stellagemevrouw">Stellage-mevrouw</string>
    <string name="zangerraymond">Zanger Raymond</string>
    <string name="age">Leeftijd:</string>
    <string name="work">Beroep:</string>
    <string name="food">Favoriete eten:</string>
    <string name="hobbies">Hobby\'s:</string>
    <string name="place">Woonplaats:</string>
    <string name="age_broodjebeleg">61</string>
    <string name="age_pizza">22</string>
    <string name="age_rappersjors">25</string>
    <string name="age_rapsen">55</string>
    <string name="age_stellage">53</string>
    <string name="age_zangerraymond">16</string>
    <string name="place_broodjebeleg">Blaricum</string>
    <string name="place_pizza">Amersfoort</string>
    <string name="place_rappersjors">Brunssum</string>
    <string name="place_rapsen">Heerhugowaard</string>
    <string name="place_stellage">Wassenaar</string>
    <string name="place_zangerraymond">Apeldoorn</string>
    <string name="work_broodjebeleg">Kunsthandelaar</string>
    <string name="work_pizza">Student onderwijsassistente</string>
    <string name="work_rappersjors">Dozen vouwen</string>
    <string name="work_rapsen">Huisvrouw</string>
    <string name="work_stellage">Veilingmeester</string>
    <string name="work_zangerraymond">Magazijnmedewerker</string>
    <string name="food_broodjebeleg">Een broodje met&#8230; beleg</string>
    <string name="food_pizza">Pizza, maar ik heb al heel veel pizza gegeten, dus dat vind ik niet meer zo heel lekker</string>
    <string name="food_rappersjors">Pindakaas</string>
    <string name="food_rapsen">Gerapste kaas</string>
    <string name="food_stellage">Maakt niet uit, zolang het maar op een stellage ligt</string>
    <string name="food_zangerraymond">Witte chocolade en cola light</string>
    <string name="hobbies_broodjebeleg">Naar mijn banksaldo kijken</string>
    <string name="hobbies_pizza">Thunderdome</string>
    <string name="hobbies_rappersjors">Rappen, rapteksten schrijven en beroemd worden</string>
    <string name="hobbies_rapsen">Mijn nieuwe raps gebruiken</string>
    <string name="hobbies_stellage">Musea bezoeken, winkelen in de p.c.</string>
    <string name="hobbies_zangerraymond">Inspiratie zoeken voor nieuwe liedjes</string>
    <string name="submit">submit</string>
</resources>
