<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingbar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitbutton"
            android:text="@string/submit"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="onClickButton"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/profilepic"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ratingbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:id="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/profilepic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/age"
            android:layout_marginTop="16dp"
            android:layout_below="@id/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:id="@+id/place"
            android:layout_below="@id/age"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:id="@+id/work"
            android:layout_below="@id/place"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:id="@+id/food"
            android:layout_below="@id/work"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:id="@+id/hobbies"
            android:layout_below="@id/food"/>

    </RelativeLayout>

</ScrollView>