<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:id="@+id/subtitle"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/subtitle"
            >

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="135dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingBroodje"
                    style="?android:attr/ratingBarStyleSmall"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/broodjebeleg"
                    android:id="@+id/broodjebeleg"
                    android:onClick="onClickPicture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/broodjebelegmeneer"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="135dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingPizza"
                    style="?android:attr/ratingBarStyleSmall"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/pizza"
                    android:id="@+id/pizza"
                    android:onClick="onClickPicture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizzameisje"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="135dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingSjors"
                    style="?android:attr/ratingBarStyleSmall"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/rappersjors"
                    android:id="@+id/rappersjors"
                    android:onClick="onClickPicture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rappersjors"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="135dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingRaps"
                    style="?android:attr/ratingBarStyleSmall"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/rapsen"
                    android:id="@+id/rapsen"
                    android:onClick="onClickPicture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rapsmevrouw"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="140dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingStellage"
                    style="?android:attr/ratingBarStyleSmall"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/stellage"
                    android:id="@+id/stellage"
                    android:onClick="onClickPicture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stellagemevrouw"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="140dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingRaymond"
                    style="?android:attr/ratingBarStyleSmall"/>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/zangerraymond"
                    android:id="@+id/zangerraymond"
                    android:onClick="onClickPicture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zangerraymond"
                    android:textSize="12sp"/>

            </LinearLayout>

        </GridLayout>

    </RelativeLayout>

</ScrollView>